--- a/index.html
+++ b/index.html
@@ -1,18 +1,16 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Arbol de Amor</title>
-    <!-- Autoría y derechos -->
-    <meta name="author" content="Zero">
-    <meta name="copyright" content="Zero - Código libre no comercial">
-    <meta name="description" content="Árbol de Amor Animado: una sorpresa interactiva y romántica para dedicar a tu pareja o ser querido. Código libre para uso personal, educativo o de inspiración.">
-    <meta name="keywords" content="amor, sorpresa, romántico, dedicatoria, animación, árbol, corazones, pareja, aniversario, regalo digital">
-    <meta name="robots" content="index, follow">
     <!-- Estilos -->
-    <link rel="stylesheet" href="Css/style.css">
-    <link rel="stylesheet" href="Css/style.mobile.css" media="only screen and (max-width: 600px)">
+    <link rel="stylesheet" href="Css/style.css" />
+    <link
+      rel="stylesheet"
+      href="Css/style.mobile.css"
+      media="only screen and (max-width: 600px)"
+    />
     <style>
       .tree-container {
         position: absolute;
@@ -28,22 +26,40 @@
         animation: beat 1s infinite;
       }
       @keyframes beat {
-        0%, 100% { transform: scale(1); }
-        20% { transform: scale(1.1); }
-        40% { transform: scale(0.95); }
-        60% { transform: scale(1.08); }
-        80% { transform: scale(1); }
+        0%,
+        100% {
+          transform: scale(1);
+        }
+        20% {
+          transform: scale(1.1);
+        }
+        40% {
+          transform: scale(0.95);
+        }
+        60% {
+          transform: scale(1.08);
+        }
+        80% {
+          transform: scale(1);
+        }
       }
     </style>
-</head>
-<body>
+  </head>
+  <body>
     <div id="floating-objects"></div>
     <div class="dedication-text" id="dedication-text">
       <div class="signature" id="signature"></div>
     </div>
     <div class="countdown" id="countdown"></div>
     <div class="tree-container" id="tree-container"></div>
-    <audio src="Music/No.5 The Day I Met Her - Esther Abrami.mp3" id="bg-music" preload="auto"></audio>
+
+    <!-- Audio de fondo -->
+    <audio
+      src="Music/No.5 The Day I Met Her - Esther Abrami.mp3"
+      id="bg-music"
+      preload="auto"
+    ></audio>
+
     <script src="Js/script.js"></script>
-</body>
+  </body>
 </html>
